# history-summarizer

./: readme.md
hist-summ-back/: .env  Cargo.toml
hist-summ-back/entities/: mod.rs  users.rs
hist-summ-back/migration/: Cargo.toml
hist-summ-back/migration/src/: lib.rs  m20250323_131216_users.rs  m20250323_145821_links.rs
hist-summ-back/src/: main.rs  middlewares.rs  routers.rs  utils.rs
hist-summ-back/src/entities/: links.rs  users.rs
hist-summ-back/src/entity/: links.rs  mod.rs  prelude.rs  users.rs
hist-summ-back/src/protected/: fetch_links.rs  fetch_recent.rs  mod.rs  read_user.rs
hist-summ-back/src/unprotected/: login.rs  logout.rs  mod.rs  refresh.rs  signup.rs
hist-summ-front/: index.html  package-lock.json  package.json
hist-summ-front/src/: App.tsx  index.css  main.tsx
hist-summ-front/src/components/: ProtectedRoute.tsx
hist-summ-front/src/context/: AuthContext.tsx  auth.tsx
hist-summ-front/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx
