[package]
name = "hist-summ-back"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration"]


[dependencies]

tokio = { version = "1.44.1", features = ["full"] }
axum = { version = "0.8.1" }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = { version = "0.15.7" }
sea-orm = { version = "1.1.7", features = [
	"sqlx-mysql",
	"runtime-tokio-rustls",
] }
jsonwebtoken = "9.3.1"
chrono = "0.4.40"

tower-http = { version = "0.6.2", features = ["cors"] }
tower-cookies = "0.11.0"
